Releases/0.5/precog-d81/helpme.md
# precog (d81)

- Release Line: `0.5`
- Artifact Build: `0.5`
- Kind: `d81`

## Why This Variant Exists

- Main full-content ReadyOS profile: one D81 holds the current app catalog, ReadyBASIC modules, and examples.

## Artifacts

- Boot-time drive 8: `readyos-v0.5-d81.d81`
- Host-Side Boot PRG: `readyos-v0.5-d81-preboot.prg`
- Host-Side Boot PRG: `readyos-v0.5-d81-boot.prg`

## Included Apps

- Drive 8: `editor` - editor
- Drive 8: `readyshell` - readyshell (beta)
- Drive 8: `simplefiles` - simple files
- Drive 8: `clipmgr` - clipboard
- Drive 8: `readybasic` - ready basic (beta)
- Drive 8: `cal26` - calendar 26
- Drive 8: `tasklist` - task list
- Drive 8: `reuviewer` - reu viewer
- Drive 8: `sysinfo` - system info
- Drive 8: `quicknotes` - quicknotes
- Drive 8: `calcplus` - calc plus
- Drive 8: `hexview` - hex viewer
- Drive 8: `simplecells` - simple cells (alpha)
- Drive 8: `game2048` - 2048 game
- Drive 8: `deminer` - deminer
- Drive 8: `dizzy` - dizzy kanban
- Drive 8: `readyirc` - readyirc
- Drive 8: `ucitest` - uci tester
- Drive 8: `readme` - read.me
- ReadyBASIC is accompanied by all three external `rbm.*` module packages and the complete 41-program procedure, graphics, and sound example/test set.
- ReadyBASIC's banked `rbcore`/`rbcode` resources are carried inside the `readybasic` executable rather than as separate disk files.

## VICE Setup

- Enable REU with at least `1MB`; `8MB` or `16MB` is recommended where available.
- The host-side boot PRGs are convenience autostart files. The disk copy of `PREBOOT` is still the normal disk-side bootstrap.
- Configure drive 8 as `1581` with true drive enabled and attach `readyos-v0.5-d81.d81`.

### VICE Command Example

- Autostart target: `readyos-v0.5-d81-preboot.prg`

```sh
x64sc -reu -reusize 16384 -drive8type 1581 -drive8truedrive -devicebackend8 0 +busdevice8 -8 readyos-v0.5-d81.d81 -autostart readyos-v0.5-d81-preboot.prg
```

## Boot

- This profile uses the direct boot chain `PREBOOT -> BOOT`.
- There is no `SETD71` stage for this variant.
- Attach the single disk on drive `8`, then autostart `readyos-v0.5-d81-preboot.prg` or run `LOAD "PREBOOT",8` then `RUN`.

## C64 Ultimate

- Copy the listed disk image files to the target storage.
- Enable the REU with at least `1MB`; use `8MB` or `16MB` where available.
- The host-side boot PRGs are optional convenience files for emulator launching; the disk-side `PREBOOT` entry is the standard hardware boot path.
- Choosing a disk SKU does not enable the experimental Ultimate DOS DMA launcher. Normal release artifacts use the portable disk loader; DMA requires an explicit `LAUNCHER_DMA_LOAD=1` source build and retains disk fallback.
- Attach the single disk image on drive `8`, then boot with `LOAD "PREBOOT",8` and `RUN`.
- This variant boots directly from `PREBOOT` into `BOOT` and does not use `SETD71`.
